adjust Bazaar tests for Java 25
By creating the repository files the FileNotFoundException thrown from
getPathRelativeToSourceRoot() is avoided.

Bazaar history parser should produce HistoryEntry objects with file paths
relative to source root, just like other Repository classes.